@@ -1,3 +1,10 @@
+## HEAD:
+
+* Removed unused env argument passed into Stackster::Stack
+* Added clone to log level
+* Catching stackster exceptions in CLI
+* Refactored shared specs
+
 ## v0.6.4:
 
 * Check for artifact encryption via attribute name_encrypted (where name is name of archive)
